--- a/day42/src/jdbc.properties
+++ b/day42/src/jdbc.properties
@@ -2,3 +2,9 @@ driverClass=com.mysql.cj.jdbc.Driver
 url=jdbc:mysql://localhost:3306/gf-demo-user?useSSL=false&serverTimezone=UTC
 username=root
 password=
+# druid default config
+# ??
+initialSize=10
+minIdle=5
+maxActive=50
+maxWait=60000
