--- a/day42/src/jdbc.properties
+++ b/day42/src/jdbc.properties
@@ -3,8 +3,11 @@ url=jdbc:mysql://localhost:3306/gf-demo-user?useSSL=false&serverTimezone=UTC
 username=root
 password=
 # druid default config
-# ??
+# 连接池初始化连接数
 initialSize=10
+# 连接池最小空闲
 minIdle=5
+# 连接池最大连接数
 maxActive=50
+# 配置获取连接等待超时的时间, 单位毫秒
 maxWait=60000
